--- a/psScripts/PresentationView/Pages/PresentationView.html
+++ b/psScripts/PresentationView/Pages/PresentationView.html
@@ -79,7 +79,7 @@
     <!-- Angular bootstrap-->
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
      <!-- Custom Scripts-->
-    <script type="text/JavaScript" src="angularApp.js"></script>
+    <script type="text/JavaScript" src="../JS/angularApp.js"></script>
 
     <script type="text/ng-template" id="/home.html">
 
@@ -156,6 +156,37 @@
          </div>           
 
         <!-- rest of template -->
+		 <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Add New Idea</h4>
+              </div>
+              <div class="modal-body">
+                <form class="form-horizontal">
+                  <div class="form-group">
+                    <label for="IdeaName" class="col-sm-2 control-label">Idea Name</label>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="IdeaName" ng-model="newIdea.ideaName" placeholder="Name of the Idea">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="IdeaDescription" class="col-sm-2 control-label">Description</label>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="ideaDescription" ng-model="newIdea.ideaDescription" placeholder="Enter Details">
+                    </div>
+                  </div>
+                 </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="createIdea()">Save Idea</button>
+              </div>
+            </div>
+          </div>
+        </div>
     </script>
 
 
@@ -169,3 +200,4 @@
 </body>
 
 </html>
+
