--- a/One-Offs/PS-Offwired/Offwired/index.html
+++ b/One-Offs/PS-Offwired/Offwired/index.html
@@ -11,7 +11,7 @@
   <!-- Bootstrap Core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="node_modules/dragula/dist/dragula.css">
+  <!--<link rel="stylesheet" href="node_modules/dragula/dist/dragula.css">-->
 
 </head>
 <body>
