removed external dependency on bootstrap and fot-awesome.

--- a/One-Offs/PS-Offwired/Offwired/index.html
+++ b/One-Offs/PS-Offwired/Offwired/index.html
@@ -9,9 +9,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Bootstrap Core CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+  <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-  <!--<link rel="stylesheet" href="node_modules/dragula/dist/dragula.css">-->
+  -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" rel="stylesheet">
+  
+  <script src="assets/js/jquery-3.2.0.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
 
 </head>
 <body>
